Use favicon.php for /favicon.ico of all wikis
This allows legacy clients to see the same favicon as the one sent by
MediaWiki due to $wgFavicon. Also, using a script for configurable
favicons removes one of the very few remaining reasons for keeping the
document roots for second-level subdomains separate.

Also, removed some obsolete yaseo references, and removed obsolete
mod_mmap_static configuration. Both favicon.ico and robots.txt are
scripts now.

Change-Id: I35d3af43b9bbf0fd4bcdf42e35c31c74a76445aa

--- a/main.conf
+++ b/main.conf
@@ -38,6 +38,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/mediawiki/w">
        <IfModule mod_php5.c>
            php_admin_flag engine on
@@ -68,6 +71,9 @@
     Alias /wiki /usr/local/apache/common/docroot/wikidata/w/index.php
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikidata/w">
        <IfModule mod_php5.c>
@@ -102,9 +108,6 @@
     # ShortURL redirect RT-2121
     RewriteRule ^/s/.*$ /w/index.php
 
-    # Test for making favicon.ico a script
-    RewriteRule ^/test-favicon\.ico$ /w/favicon.php [L]
-
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z]+)\.wiktionary\.org
@@ -125,6 +128,9 @@
     RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wiktionary.org/w">
        <IfModule mod_php5.c>
@@ -197,6 +203,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/wikiquote.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -245,6 +254,9 @@
     RewriteCond %{QUERY_STRING} ([^&;]+)
     RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/donate/w">
         <IfModule mod_php5.c>
@@ -324,6 +336,9 @@
     # moved wikistats off NFS
     RewriteRule ^/wikistats(/(.*$)|$) http://stats.wikimedia.org/$2 [R=302,L]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/wikipedia.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -399,6 +414,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/wikibooks.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -468,6 +486,9 @@
     RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikisource.org/w">
         <IfModule mod_php5.c>
@@ -539,6 +560,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/wikinews.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -606,6 +630,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/wikiversity.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -659,6 +686,9 @@
     Alias /wiki /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
     RewriteRule ^/$ /w/index.php
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/wikivoyage.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -671,21 +701,6 @@
     </Directory>
 
 </VirtualHost>
-
-
-# Wikipedias are now handled with a shared document root, above
-
-<IfModule mod_mmap_static.c>
- MMapFile /usr/local/apache/common/favicon.ico
- MMapFile /usr/local/apache/common/robots.txt
-# MMapFile /usr/local/apache/common/upload/wiki.png
-# MMapFile /usr/local/apache/common/style/cologneblue.css
-# MMapFile /usr/local/apache/common/style/nostalgia.css
-# MMapFile /usr/local/apache/common/style/quickbar.css
-# MMapFile /usr/local/apache/common/style/sticky.js
-# MMapFile /usr/local/apache/common/style/wikiprintable.css
-# MMapFile /usr/local/apache/common/style/wikistandard.css
-</IfModule>
 
 LoadModule deflate_module /usr/lib/apache2/modules/mod_deflate.so
 <IfModule mod_deflate.c>
