--- a/remnant.conf
+++ b/remnant.conf
@@ -26,9 +26,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/meta/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/meta/w">
         <IfModule mod_php5.c>
@@ -62,9 +64,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/sources/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/sources/w">
         <IfModule mod_php5.c>
@@ -101,9 +105,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/commons/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/commons/w">
         <IfModule mod_php5.c>
@@ -139,6 +145,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/grants/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -172,6 +181,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/fdc/w">
         <IfModule mod_php5.c>
@@ -208,9 +220,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
   <Directory "/usr/local/apache/common/docroot/wikimania2005/w">
    <IfModule mod_php5.c>
@@ -253,9 +267,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2006/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
   <Directory "/usr/local/apache/common/docroot/wikimania2006/w">
    <IfModule mod_php5.c>
@@ -292,9 +308,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2007/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
   <Directory "/usr/local/apache/common/docroot/wikimania2007/w">
    <IfModule mod_php5.c>
@@ -331,9 +349,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2008/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
   <Directory "/usr/local/apache/common/docroot/wikimania2008/w">
    <IfModule mod_php5.c>
@@ -370,9 +390,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2009/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
   <Directory "/usr/local/apache/common/docroot/wikimania2009/w">
    <IfModule mod_php5.c>
@@ -409,9 +431,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2010/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
   <Directory "/usr/local/apache/common/docroot/wikimania2010/w">
    <IfModule mod_php5.c>
@@ -448,9 +472,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2011/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
   <Directory "/usr/local/apache/common/docroot/wikimania2011/w">
    <IfModule mod_php5.c>
@@ -487,9 +513,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2012/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
   <Directory "/usr/local/apache/common/docroot/wikimania2012/w">
    <IfModule mod_php5.c>
@@ -527,9 +555,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2013/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
   <Directory "/usr/local/apache/common/docroot/wikimania2013/w">
    <IfModule mod_php5.c>
@@ -566,6 +596,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/internal/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -599,6 +632,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/board/w">
         <IfModule mod_php5.c>
@@ -634,6 +670,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/boardgovcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -667,6 +706,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/spcom/w">
         <IfModule mod_php5.c>
@@ -702,6 +744,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/chapcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -736,6 +781,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/wikimaniateam/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -767,6 +815,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/incubator/w">
         <IfModule mod_php5.c>
@@ -800,9 +851,11 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    # Uploads are offsite (except on yaseo)
-    RewriteCond %{SERVER_ADDR} !^211\.115\.107
+    # Uploads are offsite
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/species/$1 [R=302]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/species/w">
         <IfModule mod_php5.c>
@@ -838,6 +891,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/searchcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -869,6 +925,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/usability/w">
         <IfModule mod_php5.c>
@@ -903,6 +962,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/arbcom_dewiki/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -934,6 +996,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/arbcom_nlwiki/w">
         <IfModule mod_php5.c>
@@ -968,6 +1033,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/strategy/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1001,6 +1069,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) https://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/office/w">
         <IfModule mod_php5.c>
@@ -1037,6 +1108,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/nomcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1071,6 +1145,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/chair/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1102,6 +1179,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/advisory/w">
         <IfModule mod_php5.c>
@@ -1137,6 +1217,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/auditcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1169,6 +1252,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/quality/w">
         <IfModule mod_php5.c>
@@ -1205,6 +1291,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/otrs-wiki/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1238,6 +1327,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/exec/w">
         <IfModule mod_php5.c>
@@ -1273,6 +1365,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/collab/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1305,6 +1400,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/outreach/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1336,6 +1434,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/arbcom_fiwiki/w">
         <IfModule mod_php5.c>
@@ -1371,6 +1472,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/movementroles/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1402,6 +1506,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/tenwiki/w">
         <IfModule mod_php5.c>
@@ -1437,6 +1544,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/checkuser/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1470,6 +1580,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/steward/w">
         <IfModule mod_php5.c>
