--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -59,6 +59,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
        <IfModule mod_php5.c>
            php_admin_flag engine on
@@ -106,6 +109,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
        <IfModule mod_php5.c>
