--- a/foundation.conf
+++ b/foundation.conf
@@ -39,6 +39,9 @@
 
     RewriteRule ^/wiki/Donate$ https://donate.wikimedia.org/ [R=301,L]
 
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
     <Directory "/usr/local/apache/common/docroot/foundation/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
