add wikivoyage.eu Apache redirect (RT-4378)
Change-Id: I5ba3a60611495c1b6fae59a3291ef731a28045d6

--- a/redirects.conf
+++ b/redirects.conf
@@ -119,6 +119,7 @@
         www.commons.wikipedia.org www.commons.wikimedia.org \
         wikivoyage.com *.wikivoyage.com \
         wikivoyage.de *.wikivoyage.de \
+        wikivoyage.eu *.wikivoyage.eu \
         wikivoyage.net *.wikivoyage.net \
         wikivoyager.org *.wikivoyager.org \
         wikivoyager.de *.wikivoyager.de \
@@ -489,13 +490,16 @@
     RewriteRule ^//?(.*)$ http://species.wikipedia.org/$1 [R=301,L]
 
     # Wikivoyage
-    RewriteCond %{HTTP_HOST} (.+)\.wikivoyage.(com|de|net)$
+    RewriteCond %{HTTP_HOST} (.+)\.wikivoyage.(com|de|eu|net)$
     RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyage.com
     RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyage.de
+    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =wikivoyage.eu
     RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyage.net
