adding support for wikinews.de
Change-Id: I04e5331f08aedd0a3b7bcea90ba6fa42b0547236

--- a/redirects.conf
+++ b/redirects.conf
@@ -88,6 +88,7 @@
         wikimediacommons.net *.wikimediacommons.net \
         wikimediacommons.mobi *.wikimediacommons.mobi \
         wikimediacommons.org *.wikimediacommons.org \
+        wikinews.de *.wikinews.de \
         wikiknihy.cz *.wikiknihy.cz \
         wikipaedia.net *.wikipaedia.net \
         wiki-pedia.org *.wiki-pedia.org \
@@ -377,6 +378,10 @@
     RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L,NE]
 
     # Localised TLDs
+
+    RewriteCond %{HTTP_HOST} =wikinews.de [OR]
+    RewriteCond %{HTTP_HOST} (^|\.)wikinews.de$
+    RewriteRule ^(.*)$ http://de.wikinews.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} (^|\.)wicipediacymraeg\.org$
     RewriteRule ^(.*)$ http://cy.wikipedia.org$1 [R=301,L,NE]
