sort ServerAlias alphabetically in redirects.conf
Change-Id: I7bd93d4f42059271c93b5230c3aeb99be443f34e

--- a/redirects.conf
+++ b/redirects.conf
@@ -5,11 +5,10 @@
 <VirtualHost *>
     ServerName redirector.wikipedia.org
     ServerAlias wikipedia.com *.wikipedia.com wikipedia.org \
-        wikimedia.com *.wikimedia.com\
         boards.wikipedia.org \
         bookshelf.wikimedia.org \
-        bugzilla.mediawiki.org \
         bugs.mediawiki.org \
+        bugzilla.mediawiki.org \
         bugzilla.wikipedia.org \
         cs.wikimedia.org \
         cz.wikibooks.org \
@@ -21,114 +20,9 @@
         cz.wikiversity.org \
         cz.wiktionary.org \
         de-beta.wikipedia.org \
-        dk.wikipedia.org \
         dk.wikibooks.org \
+        dk.wikipedia.org \
         dk.wiktionary.org \
-        educacao.wikimedia.org \
-        education.wikimedia.org \
-        en2.wikipedia.org \
-        epo.wikipedia.org \
-        hu.wikimedia.org \
-        it.wikimedia.org \
-        pt.wikimedia.org \
-        jp.wikipedia.org \
-        mediawiki.com *.mediawiki.com \
-        mediawiki.org \
-        meta.wikipedia.org \
-        www.meta.wikipedia.org \
-        www.meta.wikimedia.org \
-        minnan.wikipedia.org \
-        nan.wikipedia.org \
-        nb.wikipedia.org tp.wikipedia.org \
-        nostalgia.wikimedia.org \
-        quality.wikipedia.org quality.wikipedia.com \
-        quote.wikipedia.org \
-        sep11.wikipedia.org \
-        sources.wikipedia.org \
-        tartupeedia.ee *.tartupeedia.ee \
-        textbook.wikipedia.org \
-        vikimedija.org *.vikimedija.org \
-        wicipediacymraeg.org *.wicipediacymraeg.org \
-        wikibooks.org \
-        wikibook.org *.wikibook.org wikibook.com wikibooks.com *.wikibook.com \
-        wikibooks.de www.wikibooks.de *.wikibooks.com \
-        wikibooks.cz *.wikibooks.cz \
-        wikicitaty.cz *.wikicitaty.cz \
-        wikidisclosure.com *.wikidisclosure.com \
-        wikidisclosure.org *.wikidisclosure.org \
-        wikiartpedia.biz *.wikiartpedia.biz \
-        wikiartpedia.co *.wikiartpedia.co \
-        wikiartpedia.info *.wikiartpedia.info \
-        wikiartpedia.me *.wikiartpedia.me \
-        wikiartpedia.mobi *.wikiartpedia.mobi \
-        wikiartpedia.net *.wikiartpedia.net \
-        wikidruhy.cz *.wikidruhy.cz \
-        wikifamily.com *.wikifamily.com \
-        wikifamily.org *.wikifamily.org \
-        wikijunior.com *.wikijunior.com \
-        wikijunior.net *.wikijunior.net \
-        wikijunior.org *.wikijunior.org \
-        wikimania.wikimedia.org \
-        wikimania.asia *.wikimania.asia \
-        labs.wikimedia.org \
-        wikimaps.org *.wikimaps.org \
-        wikimaps.com *.wikimaps.com \
-        wikimedia.lt *.wikimedia.lt \
-        wikimedia.biz *.wikimedia.biz \
-        wikimedia.jp.net *.wikimedia.jp.net \
-        wikimediafoundation.com *.wikimediafoundation.com \
-        wikimediafoundation.info *.wikimediafoundation.info \
-        wikimediafoundation.net *.wikimediafoundation.net \
-        *.wikimediafoundation.org \
-        wikimediacommons.eu *.wikimediacommons.eu \
-        wikimediacommons.co.uk *.wikimediacommons.co.uk \
-        wikimediacommons.info *.wikimediacommons.info \
-        wikimediacommons.jp.net *.wikimediacommons.jp.net \
-        wikimediacommons.net *.wikimediacommons.net \
-        wikimediacommons.mobi *.wikimediacommons.mobi \
-        wikimediacommons.org *.wikimediacommons.org \
-        wikinews.de *.wikinews.de \
-        wikiknihy.cz *.wikiknihy.cz \
-        wikipaedia.net *.wikipaedia.net \
-        wiki-pedia.org *.wiki-pedia.org \
-        wikipedia.bg *.wikipedia.bg \
-        wikipedia.co.uk *.wikipedia.co.uk \
-        wikipedia.cz *.wikipedia.cz \
-        wikipedia.lt *.wikipedia.lt \
-        wikimemory.org *.wikimemory.org \
-        wikipedia.net *.wikipedia.net \
-        wikipedia.org.il *.wikipedia.org.il \
-        wikipedia.com.il *.wikipedia.com.il \
-        wikipedia.co.za *.wikipedia.co.za \
-        wikipedie.cz *.wikipedie.cz \
-        wikiquote.com *.wikiquote.com\
-        wikiquote.cz *.wikiquote.cz \
-        wikislovnik.cz *.wikislovnik.cz \
-        wikisource.cz *.wikisource.cz \
-        wikispecies.cz *.wikispecies.cz \
-        wikispecies.com *.wikispecies.com \
-        wikispecies.net *.wikispecies.net \
-        wikispecies.org *.wikispecies.org species.wikipedia.org \
-        wikiversity.com *.wikiversity.com \
-        wikiversity.cz *.wikiversity.cz \
-        wikiverzita.cz *.wikiverzita.cz \
-        wikizpravy.cz *.wikizpravy.cz \
-        wikizdroje.cz *.wikizdroje.cz \
-        wiktionary.cz *.wiktionary.cz \
-        wikisource.com *.wikisource.com commons.wikipedia.org \
-        www.commons.wikipedia.org www.commons.wikimedia.org \
-        wikivoyage.com *.wikivoyage.com \
-        wikivoyage.de *.wikivoyage.de \
-        wikivoyage.eu *.wikivoyage.eu \
-        wikivoyage.net *.wikivoyage.net \
-        wikivoyager.org *.wikivoyager.org \
-        wikivoyager.de *.wikivoyager.de \
-        wiki.mediawiki.org \
-        wikipedia.info *.wikipedia.info \
-        wiktionary.com *.wiktionary.com \
-        wiktionary.wikipedia.org \
-        zh-cfr.wikipedia.org \
-        zh-tw.wikipedia.org zh-cn.wikipedia.org \
         donate.mediawiki.org \
         donate.wikibooks.org \
         donate.wikimediafoundation.org \
@@ -139,18 +33,124 @@
         donate.wikispecies.org \
         donate.wikiversity.org \
         donate.wiktionary.org \
-        shop.wikipedia.com store.wikipedia.com \
-        shop.wiktionary.org store.wiktionary.org \
-        shop.wikiquote.org store.wikiquote.org \
+        educacao.wikimedia.org \
+        education.wikimedia.org \
+        en2.wikipedia.org \
+        epo.wikipedia.org \
+        hu.wikimedia.org \
+        it.wikimedia.org \
+        jp.wikipedia.org \
+        labs.wikimedia.org \
+        mediawiki.com *.mediawiki.com \
+        mediawiki.org \
+        meta.wikipedia.org \
+        minnan.wikipedia.org \
+        nan.wikipedia.org \
+        nb.wikipedia.org tp.wikipedia.org \
+        nostalgia.wikimedia.org \
+        pt.wikimedia.org \
+        quality.wikipedia.org quality.wikipedia.com \
+        quote.wikipedia.org \
+        sep11.wikipedia.org \
+        shop.mediawiki.org store.mediawiki.org \
         shop.wikibooks.org store.wikibooks.org \
-        shop.wikiquote.org store.wikiquote.org \
+        shop.wikimediafoundation.org store.wikimediafoundation.org \
         shop.wikinews.org store.wikinews.org \
+        shop.wikipedia.com store.wikipedia.com \
+        shop.wikipedia.org store.wikipedia.org \
+        shop.wikiquote.org store.wikiquote.org \
+        shop.wikiquote.org store.wikiquote.org \
         shop.wikisource.org store.wikisource.org \
         shop.wikiversity.org store.wikiversity.org \
-        shop.mediawiki.org store.mediawiki.org \
-        shop.wikimediafoundation.org store.wikimediafoundation.org \
-        shop.wikipedia.org store.wikipedia.org \
-        wlm.wikimedia.org
+        shop.wiktionary.org store.wiktionary.org \
+        sources.wikipedia.org \
+        tartupeedia.ee *.tartupeedia.ee \
+        textbook.wikipedia.org \
+        vikimedija.org *.vikimedija.org \
+        wicipediacymraeg.org *.wicipediacymraeg.org \
+        wikiartpedia.biz *.wikiartpedia.biz \
+        wikiartpedia.co *.wikiartpedia.co \
+        wikiartpedia.info *.wikiartpedia.info \
+        wikiartpedia.me *.wikiartpedia.me \
+        wikiartpedia.mobi *.wikiartpedia.mobi \
+        wikiartpedia.net *.wikiartpedia.net \
+        wikibook.org *.wikibook.org wikibook.com wikibooks.com *.wikibook.com \
+        wikibooks.cz *.wikibooks.cz \
+        wikibooks.de www.wikibooks.de *.wikibooks.com \
+        wikibooks.org \
+        wikicitaty.cz *.wikicitaty.cz \
+        wikidisclosure.com *.wikidisclosure.com \
+        wikidisclosure.org *.wikidisclosure.org \
+        wikidruhy.cz *.wikidruhy.cz \
+        wikifamily.com *.wikifamily.com \
+        wikifamily.org *.wikifamily.org \
+        wikijunior.com *.wikijunior.com \
+        wikijunior.net *.wikijunior.net \
+        wikijunior.org *.wikijunior.org \
+        wikiknihy.cz *.wikiknihy.cz \
+        wikimania.asia *.wikimania.asia \
+        wikimania.wikimedia.org \
+        wikimaps.com *.wikimaps.com \
+        wikimaps.org *.wikimaps.org \
+        wikimedia.biz *.wikimedia.biz \
+        wikimediacommons.co.uk *.wikimediacommons.co.uk \
+        wikimediacommons.eu *.wikimediacommons.eu \
+        wikimediacommons.info *.wikimediacommons.info \
+        wikimediacommons.jp.net *.wikimediacommons.jp.net \
+        wikimediacommons.mobi *.wikimediacommons.mobi \
+        wikimediacommons.net *.wikimediacommons.net \
+        wikimediacommons.org *.wikimediacommons.org \
+        wikimedia.com *.wikimedia.com\
+        wikimediafoundation.com *.wikimediafoundation.com \
+        wikimediafoundation.info *.wikimediafoundation.info \
+        wikimediafoundation.net *.wikimediafoundation.net \
+        *.wikimediafoundation.org \
+        wikimedia.jp.net *.wikimedia.jp.net \
+        wikimedia.lt *.wikimedia.lt \
+        wiki.mediawiki.org \
+        wikimemory.org *.wikimemory.org \
+        wikinews.de *.wikinews.de \
+        wikipaedia.net *.wikipaedia.net \
+        wikipedia.bg *.wikipedia.bg \
+        wikipedia.com.il *.wikipedia.com.il \
+        wikipedia.co.uk *.wikipedia.co.uk \
+        wikipedia.co.za *.wikipedia.co.za \
+        wikipedia.cz *.wikipedia.cz \
+        wikipedia.info *.wikipedia.info \
+        wikipedia.lt *.wikipedia.lt \
+        wikipedia.net *.wikipedia.net \
+        wikipedia.org.il *.wikipedia.org.il \
+        wiki-pedia.org *.wiki-pedia.org \
+        wikipedie.cz *.wikipedie.cz \
+        wikiquote.com *.wikiquote.com\
+        wikiquote.cz *.wikiquote.cz \
+        wikislovnik.cz *.wikislovnik.cz \
+        wikisource.com *.wikisource.com commons.wikipedia.org \
+        wikisource.cz *.wikisource.cz \
+        wikispecies.com *.wikispecies.com \
+        wikispecies.cz *.wikispecies.cz \
+        wikispecies.net *.wikispecies.net \
+        wikispecies.org *.wikispecies.org species.wikipedia.org \
+        wikiversity.com *.wikiversity.com \
+        wikiversity.cz *.wikiversity.cz \
+        wikiverzita.cz *.wikiverzita.cz \
+        wikivoyage.com *.wikivoyage.com \
+        wikivoyage.de *.wikivoyage.de \
+        wikivoyage.eu *.wikivoyage.eu \
+        wikivoyage.net *.wikivoyage.net \
+        wikivoyager.de *.wikivoyager.de \
+        wikivoyager.org *.wikivoyager.org \
+        wikizdroje.cz *.wikizdroje.cz \
+        wikizpravy.cz *.wikizpravy.cz \
+        wiktionary.com *.wiktionary.com \
+        wiktionary.cz *.wiktionary.cz \
+        wiktionary.wikipedia.org \
+        wlm.wikimedia.org \
+        www.commons.wikipedia.org www.commons.wikimedia.org \
+        www.meta.wikimedia.org \
+        www.meta.wikipedia.org \
+        zh-cfr.wikipedia.org \
+        zh-tw.wikipedia.org zh-cn.wikipedia.org
 
     # allow caching for redirects
     <IfModule mod_headers.c>
