--- a/redirects.conf
+++ b/redirects.conf
@@ -38,6 +38,7 @@
         en2.wikipedia.org \
         epo.wikipedia.org \
         hu.wikimedia.org \
+        indiawikipedia.com \
         it.wikimedia.org \
         jp.wikipedia.org \
         labs.wikimedia.org \
@@ -624,6 +625,10 @@
     # tartupeedia.ee (WMEE-owned domain) - bug 44893
     RewriteCond %{HTTP_HOST} (.*)tartupeedia\.ee$
     RewriteRule ^(.*)$ https://et.wikipedia.org/wiki/Portaal:Tartupeedia [R=301,L]
+
+    # indiawikipedia.com - RT #1395
+    RewriteCond %{HTTP_HOST} (.*)indiawikipedia\.com$
+    RewriteRule ^(.*)$ http://wikimedia.in/wikipedia.html [R=301,L]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
