let's also make that work for www.indiawikipedia (RT-1395)
Change-Id: I76352fcec12dcde1260114d12737412266afa511

--- a/redirects.conf
+++ b/redirects.conf
@@ -38,7 +38,7 @@
         en2.wikipedia.org \
         epo.wikipedia.org \
         hu.wikimedia.org \
-        indiawikipedia.com \
+        indiawikipedia.com *.indiawikipedia.com \
         it.wikimedia.org \
         jp.wikipedia.org \
         labs.wikimedia.org \
