redirect wikipedia.ee to et.wikipedia and wikimedia.ee to et.wikimedia (RT-4566)
Change-Id: I20d991923f111b7c4cc2479c32eb6da67df80f09

--- a/redirects.conf
+++ b/redirects.conf
@@ -101,7 +101,8 @@
         wikimediacommons.mobi *.wikimediacommons.mobi \
         wikimediacommons.net *.wikimediacommons.net \
         wikimediacommons.org *.wikimediacommons.org \
-        wikimedia.com *.wikimedia.com\
+        wikimedia.com *.wikimedia.com \
+        wikimedia.ee *.wikimedia.ee \
         wikimediafoundation.com *.wikimediafoundation.com \
         wikimediafoundation.info *.wikimediafoundation.info \
         wikimediafoundation.net *.wikimediafoundation.net \
@@ -117,6 +118,7 @@
         wikipedia.co.uk *.wikipedia.co.uk \
         wikipedia.co.za *.wikipedia.co.za \
         wikipedia.cz *.wikipedia.cz \
+        wikipedia.ee *.wikipedia.ee \
         wikipedia.info *.wikipedia.info \
         wikipedia.lt *.wikipedia.lt \
         wikipedia.net *.wikipedia.net \
@@ -448,6 +450,13 @@
 
     RewriteCond %{HTTP_HOST} (^|\.)wikipedia\.cz$
     RewriteRule ^(.*)$ http://cs.wikipedia.org$1 [R=301,L]
+
+    # wikimedia.ee / wikipedia.ee - RT #4566
+    RewriteCond %{HTTP_HOST} (^|\.)wikimedia\.ee$
+    RewriteRule ^(.*)$ http://et.wikimedia.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} (^|\.)wikipedia\.ee$
+    RewriteRule ^(.*)$ http://et.wikipedia.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikimediacommons.co.uk$
     RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L]
