redirect wikiquote.net to wikiquote.org (RT-4695)
Change-Id: I57c5645291774650ef394e8301f476cce7b4057a

--- a/redirects.conf
+++ b/redirects.conf
@@ -127,6 +127,7 @@
         wikipedie.cz *.wikipedie.cz \
         wikiquote.com *.wikiquote.com\
         wikiquote.cz *.wikiquote.cz \
+        wikiquote.net *.wikiquote.net \
         wikislovnik.cz *.wikislovnik.cz \
         wikisource.com *.wikisource.com commons.wikipedia.org \
         wikisource.cz *.wikisource.cz \
@@ -487,13 +488,14 @@
 
     # Wikiquote
 
-    RewriteCond %{HTTP_HOST} =wikiquote.com
+    RewriteCond %{HTTP_HOST} =wikiquote.com [OR]
+    RewriteCond %{HTTP_HOST} =wikiquote.net [OR]
     RewriteRule ^(.*)$ http://wikiquote.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =quote.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikiquote.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} ^(.*)\.wikiquote.com$
+    RewriteCond %{HTTP_HOST} ^(.*)\.wikiquote.(com|net)$
     RewriteRule ^(.*)$ http://%1.wikiquote.org$1 [R=301,L]
 
     # Wikispecies
