Fix wikiquote.net spurrious OR
This redirected a lot more than just wikiquote.com/net to wikiquote.org,
such as mediawiki.org. Bug 46018 / RT 46018.

Change-Id: I6b4143de2299578b30deb2e9972f14b163b2afe0

--- a/redirects.conf
+++ b/redirects.conf
@@ -489,7 +489,7 @@
     # Wikiquote
 
     RewriteCond %{HTTP_HOST} =wikiquote.com [OR]
-    RewriteCond %{HTTP_HOST} =wikiquote.net [OR]
+    RewriteCond %{HTTP_HOST} =wikiquote.net
     RewriteRule ^(.*)$ http://wikiquote.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =quote.wikipedia.org
