--- a/redirects.conf
+++ b/redirects.conf
@@ -37,6 +37,8 @@
         education.wikimedia.org \
         en2.wikipedia.org \
         epo.wikipedia.org \
+        en-wp.org *.en-wp.org \
+        en-wp.com *.en-wp.com \
         hu.wikimedia.org \
         indiawikipedia.com *.indiawikipedia.com \
         it.wikimedia.org \
@@ -317,6 +319,9 @@
 
 
     # Alternate main domains
+
+    RewriteCond %{HTTP_HOST} (^|\.)en-wp\.(com|org)$
+    RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikipedia.com [OR]
     RewriteCond %{HTTP_HOST} =wikipedia.net [OR]
