Fold wikiquote rewrites into one.
Change-Id: I41cadfb4a8746f6745c024c7debd86b05199c7e6

--- a/redirects.conf
+++ b/redirects.conf
@@ -529,15 +529,11 @@
 
     # Wikiquote
 
-    RewriteCond %{HTTP_HOST} =wikiquote.com [OR]
-    RewriteCond %{HTTP_HOST} =wikiquote.net
-    RewriteRule ^(.*)$ http://wikiquote.org$1 [R=301,L]
-
     RewriteCond %{HTTP_HOST} =quote.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikiquote.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} ^(.*)\.wikiquote.(com|net)$
-    RewriteRule ^(.*)$ http://%1.wikiquote.org$1 [R=301,L]
+    RewriteCond %{HTTP_HOST} ^(.*\.|)wikiquote.(com|net)$
+    RewriteRule ^(.*)$ http://%1wikiquote.org$1 [R=301,L]
 
     # Wikispecies
 
