--- a/redirects.conf
+++ b/redirects.conf
@@ -20,6 +20,7 @@
         cz.wikiversity.org \
         cz.wiktionary.org \
         de-beta.wikipedia.org \
+        de.labs.wikimedia.org \
         dk.wikibooks.org \
         dk.wikipedia.org \
         dk.wiktionary.org \
@@ -37,10 +38,13 @@
         education.wikimedia.org \
         en2.wikipedia.org \
         epo.wikipedia.org \
+        en.labs.wikimedia.org \
         en-wp.org *.en-wp.org \
         en-wp.com *.en-wp.com \
+        flaggedrevs.labs.wikimedia.org \
         hu.wikimedia.org \
         indiawikipedia.com *.indiawikipedia.com \
+        liquidthreads.labs.wikimedia.org \
         it.wikimedia.org \
         jp.wikipedia.org \
         labs.wikimedia.org \
@@ -54,6 +58,7 @@
         pt.wikimedia.org \
         quality.wikipedia.org quality.wikipedia.com \
         quote.wikipedia.org \
+        readerfeedback.labs.wikimedia.org \
         sep11.wikipedia.org \
         shop.mediawiki.org store.mediawiki.org \
         shop.wikibooks.org store.wikibooks.org \
@@ -623,6 +628,10 @@
     # labs -> labsconsole
     RewriteCond %{HTTP_HOST} =labs.wikimedia.org
     RewriteRule . https://labsconsole.wikimedia.org/ [R=302,L]
+   
+    # old sub.sub labs domains, redirect to wikitech/labs
+    RewriteCond %{HTTP_HOST} ^(.*\.|)(de|en|flaggedrevs|liquidthreads|readerfeedback)\.labs\.wikimedia.org$
+    RewriteRule . https://wikitech.wikimedia.org/ [R=301,L]
 
     # Redirecting from subdirectories of wikipedia.org to subdomains
     RewriteCond %{HTTP_HOST} =wikipedia.org
