redirection for softwarewikipedia.net per rt4672
Change-Id: Ib6b571aa2ccc854b57db1d28de33779f6b9a2341

--- a/redirects.conf
+++ b/redirects.conf
@@ -71,6 +71,7 @@
         shop.wikisource.org store.wikisource.org \
         shop.wikiversity.org store.wikiversity.org \
         shop.wiktionary.org store.wiktionary.org \
+        softwarewikipedia.net *.softwarewikipedia.net \
         sources.wikipedia.org \
         tartupeedia.ee *.tartupeedia.ee \
         textbook.wikipedia.org \
@@ -553,6 +554,9 @@
     RewriteRule ^/(.*)$ http://outreach.wikimedia.org/wiki/Bookshelf/$1 [R=302,L]
 
     # Other projects
+
+    RewriteCond %{HTTP_HOST} (^|\.)softwarewikipedia\.net$
+    RewriteRule ^(.*)$ http://mediawiki.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =boards.wikipedia.org
     RewriteRule ^(.*)$ http://boards.wikimedia.org$1 [R=301,L]
